# agentic-app-course

./: .gitignore  README.md  ROBUSTNESS_TEST_REPORT.md  pyproject.toml  run_week2_tests.py  week_3_requirements_checklist.md
.cursor/rules/: project_standards.mdc  way_of_working.mdc
agentic_app_quickstart/examples/: helpers.py
tests/e2e/: test_all_functionality_week2.py  test_complete_workflow.py  test_conversation_memory_e2e.py  test_error_handling_e2e.py  test_week2_enhanced_workflow.py
tests/integration/: test_error_handling_integration.py  test_visualization_integration.py
tests/unit/: test_chart_types_available.py  test_guardrails.py  test_phoenix_tracing.py  test_pydantic_models.py  test_session_management.py  test_tools.py  test_tools_errors.py  test_tools_success.py  test_visualization_complete.py
week_1/: README.md
week_1/solution/: chat_service.py  csv_agents.py  main.py  tools.py  visualization_core.py
week_1/solution/.cursor/rules/: examples_style.mdc
week_2/: README.md
week_2/solution/: FINAL_REPORT.md  enhanced_chat_service.py  main.py
week_2/solution/config/: phoenix_config.py
week_2/solution/monitoring/: enhanced_tracing.py  phoenix_monitor.py  phoenix_trace_reader.py
week_3/: .dockerignore  Dockerfile  README.md  pyproject.toml
week_3/src/: main.py  terminal_main.py
week_3/src/agents_/: __init__.py  chat_service.py  csv_agents.py  pydantic_models.py
week_3/src/api/: __init__.py  endpoints.py  models.py
week_3/src/helpers/: __init__.py  model_helper.py
week_3/src/mcp_server/: server.py
week_3/src/monitoring/: __init__.py  enhanced_tracing.py
week_3/tests/: __init__.py  test_api_e2e.py
week_3/tests/e2e/: test_api_e2e_workflow.py  test_complete_workflow.py  test_robustness_llm_judge.py
week_3/tests/helpers/: __init__.py  llm_judge.py
week_3/tests/unit/: test_chart_types_available.py  test_guardrails.py  test_phoenix_tracing.py  test_pydantic_models.py  test_session_management.py  test_tools.py  test_tools_errors.py  test_tools_success.py  test_visualization_complete.py
